--- a/Classwork/AbimsClassWork/index.html
+++ b/Classwork/AbimsClassWork/index.html
@@ -36,22 +36,61 @@
         margin-top: 20px;
       }
     </style>
-    <script src="merkeltree.js"></script>
+    <script>
+      const { MerkleTree } = require("merkletreejs");
+      const SHA256 = require("crypto-js/sha256");
+
+      // const a = document.querySelector(".address1").value;
+      // const b = document.querySelector(".address2").value;
+      // const c = document.querySelector(".address3").value;
+
+      const a = "0x4b20993bc481177ec7e8f571cecae8a9e22c02db";
+      const b = "0x5b38da6a701c568545dcfcb03fcb875f56beddc4";
+      const c = "0x17f6ad8ef982297579c203069c1dbffe4348c372";
+      const leaves = [a, b, c].map((x) => SHA256(x));
+      const tree = new MerkleTree(leaves, SHA256);
+      const root = tree.getRoot().toString("hex");
+      const leaf = SHA256(a);
+      const proof = tree.getProof(leaf);
+      console.log(tree.verify(proof, leaf, root)); // true
+
+      // document.querySelector(".calculate").addEventListener("click", x);
+      // document.querySelector(".verify").addEventListener("click", y);
+
+      // "0x4b20993bc481177ec7e8f571cecae8a9e22c02db"
+      // "0x5b38da6a701c568545dcfcb03fcb875f56beddc4"
+      // "0x17f6ad8ef982297579c203069c1dbffe4348c372"
+    </script>
   </head>
 
   <body>
     <h1>Merkel Root Calculator</h1>
 
     <label for="address1">Address 1:</label>
-    <input type="text" id="address1" placeholder="Enter Address 1" />
+    <input
+      type="text"
+      id="address1"
+      class="address1"
+      placeholder="Enter Address 1"
+    />
 
     <label for="address2">Address 2:</label>
-    <input type="text" id="address2" placeholder="Enter Address 2" />
+    <input
+      type="text"
+      id="address2"
+      class="address2"
+      placeholder="Enter Address 2"
+    />
 
     <label for="address3">Address 3:</label>
-    <input type="text" id="address3" placeholder="Enter Address 3" />
+    <input
+      type="text"
+      id="address3"
+      class="address3"
+      placeholder="Enter Address 3"
+    />
 
-    <button class="btn">Calculate Merkel Root</button>
+    <button class="calculate">Calculate Merkel Root</button>
 
     <div id="merkelRoot"></div>
 
@@ -61,6 +100,8 @@
       id="addressToVerify"
       placeholder="Enter Address to Verify"
     />
+
+    <button class="verify">Verify Merkel Root</button>
 
     <div id="verificationResult"></div>
   </body>
